# blackroad-cli

./: .env.example  .gitignore  .prettierignore  BUILD_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  FINAL_SUMMARY.md  README.md  WINDOWS.md  agent.sh  agents-zoom.sh  blackroad  clerk-config.json  deploy.sh  docker-compose.yaml  go.mod  index.js  main.go  orchestrator.sh  package-lock.json  package.json  pyproject.toml  railway.toml  render.sh  requirements.txt  service-mesh.json  stripe-config.json  tui-core.sh  ui.sh  vercel.json  voice.sh  wrangler.toml
.cloudflared/: config.yml
.github/workflows/: integrations-check.yml
.ngrok/: ngrok.yml
cli/: console.py
cli-ollama/: README.md  blackroad.config.json  package-lock.json  package.json  tsconfig.json
cli-ollama/src/: config.ts  index.ts  io.ts  ollama.ts  orchestrator.ts  renderer.ts  types.ts
commands/: agents.js  backup.js  cloudflare.js  crypto.js  db.js  deploy.js  docker.js  emoji.js  git.js  health.js  integrations.js  inventory.js  k8s.js  logs-agg.js  logs.js  monitor.js  network.js  notify.js  open.js  pipeline.js  policy.js  quiz.js  railway.js  run.js  scale.js  script.js  secrets.js  services.js  ssh.js  status.js  test.js  tunnel.js  windows.js  workflow.js
config/: integrations.yaml  providers.yaml  settings.py  users.json
lib/: ai-providers.js  autoscale.js  backup.js  emoji.js  inventory.js  memory.js  policy.js  secrets.js  selector.js  services.js  telemetry.js  testing.js
lib/integrations/: asana.js  clerk.js  huggingface.js  index.js  notion.js  stripe.js
scripts/pyto/: agent_spawn.py  deploy_check.py  status_dashboard.py
test/: ai-providers.test.js  cli-dispatch.test.js  emoji.test.js  selector.test.js  services.test.js  telemetry.test.js
themes/warp/: blackroad-dark.yaml  blackroad-workflows.yaml
